# OOP

./: .gitignore  README.md
laba_1/: CMakeLists.txt  fear.cpp  fear.h  main.cpp
laba_1/tests/: test01.cpp
